--- a/README
+++ b/README
@@ -68,6 +68,11 @@ The development of ChaNGa was supported by a National Science
 Foundation ITR grant PHY-0205413 to the University of Washington, and
 NSF ITR grant NSF-0205611 to the University of Illinois.  Contributors
 to the program include:
+Philip Chang
+Ronak Buch
+Jaemin Choi
+Jesse Ashworth
+Michael Tremmel
 Abhishek Gupta
 Aditya Devarakonda
 Alexander Fry
