Update README  Sijing Chen --> Sijing Shen

--- a/README
+++ b/README
@@ -104,7 +104,7 @@ Pritish Jetley
 Robel Geda
 Rok Roskar
 Sayantan Chakravorty
-Sijing Chen
+Sijing Shen
 Simon Garcia De Gonzalo
 Spencer Wallace
 Thomas Quinn
